Fix type misalignment between front and back

--- a/frontend/src/components/LockerStatus.css
+++ b/frontend/src/components/LockerStatus.css
@@ -9,6 +9,7 @@
   font-weight: bold;
   font-size: 2rem;
   color: #fefefe;
+  aspect-ratio: 9/16;
   background-color: #75aaeb;
   border: 1px solid #046dee;
   border-radius: 0.5rem;
